GS-7917 Fixed no thanks for overview page, fixed close window, partial IE6 fix (school choice location div no longer wraps on page), got rid of onclick close on hover bottom

--- a/src/webapp/res/css/community/registration/chooserRegistration.css
+++ b/src/webapp/res/css/community/registration/chooserRegistration.css
@@ -5,6 +5,10 @@
     float: left;
 }
 
+* html #chooserRegistration #loginDetails {
+    margin-left: 0;
+}
+
 #chooserRegistration {
     padding-left: 20px;
     height: 240px;
